fix themes and animations

--- a/src/common/i18n/locales/ar.json
+++ b/src/common/i18n/locales/ar.json
@@ -1,3 +1,7 @@
 {
-	"hello": "اهلا"
+	"about": "تبذة عننا",
+	"amenities": "مرافق",
+	"types": "انواع الوحدات",
+	"location": "الموقع",
+	"contact": "الاتصال"
 }
