--- a/src/common/i18n/locales/en.json
+++ b/src/common/i18n/locales/en.json
@@ -1,3 +1,8 @@
 {
-	"hello": "hellow"
+	"hello": "hellow",
+	"about": "About",
+	"amenities": "Amenities",
+	"types": "Unit Types",
+	"location": "Location",
+	"contact": "Contact"
 }
