fix menu on mobile

--- a/src/common/i18n/locales/ar.json
+++ b/src/common/i18n/locales/ar.json
@@ -1,6 +1,7 @@
 {
 	"about": "تبذة عننا",
 	"amenities": "مرافق",
+	"menu": "القائمة",
 	"types": "انواع الوحدات",
 	"location": "الموقع",
 	"contact": "الاتصال"
