--- a/src/common/i18n/locales/en.json
+++ b/src/common/i18n/locales/en.json
@@ -1,6 +1,7 @@
 {
 	"hello": "hellow",
 	"about": "About",
+	"menu": "menu",
 	"amenities": "Amenities",
 	"types": "Unit Types",
 	"location": "Location",
