--- a/src/common/i18n/locales/ar.json
+++ b/src/common/i18n/locales/ar.json
@@ -1,8 +1,11 @@
 {
 	"about": "تبذة عننا",
 	"amenities": "مرافق",
+	"contacts": "جهات الاتصال",
 	"menu": "القائمة",
+	"copyright": "حقوق النشر © إيسولف. جميع الحقوق محفوظة.",
 	"types": "انواع الوحدات",
+	"about_us_footer": "استمتع بالمزيج المثالي من الفخامة والراحة في فندق رخاتس سان، حيث تخلق الخدمة الاستثنائية والمرافق الحديثة إقامة لا تُنسى في قلب المدينة.",
 	"location": "الموقع",
 	"contact": "الاتصال"
 }
