--- a/src/common/i18n/locales/en.json
+++ b/src/common/i18n/locales/en.json
@@ -5,5 +5,7 @@
 	"amenities": "Amenities",
 	"types": "Unit Types",
 	"location": "Location",
+	"about_us_footer": "Experience the perfect blend of luxury and comfort at Rhactus San Hotel, where exceptional service and modern amenities create an unforgettable stay in the heart of the city.",
+	"copyright": "Copyright ©  Esolve. All Rights Reserved.",
 	"contact": "Contact"
 }
